[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/CrimsonText-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/sheet.png" type="Texture" id=2]
[ext_resource path="res://scripts/sheet.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="sheet" type="Node2D"]
script = ExtResource( 3 )

[node name="Sheet" type="Sprite" parent="."]
position = Vector2( 360, 300 )
scale = Vector2( 0.215441, 0.235294 )
texture = ExtResource( 2 )

[node name="character_image" type="Sprite" parent="."]
position = Vector2( 100, 112 )
scale = Vector2( 0.234375, 0.3125 )

[node name="hp_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 272.0
margin_top = 280.0
margin_right = 457.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( 25, 10 )
custom_fonts/normal_font = SubResource( 1 )
text = "HP"

[node name="ki_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 274.0
margin_top = 319.0
margin_right = 459.0
margin_bottom = 355.0
custom_fonts/normal_font = SubResource( 1 )
text = "KI"

[node name="st_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 275.0
margin_top = 360.0
margin_right = 462.0
margin_bottom = 400.0
custom_fonts/normal_font = SubResource( 1 )
text = "ST"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 176.0
margin_top = 102.0
margin_right = 352.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "NOME"

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 217.0
margin_top = 129.0
margin_right = 273.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 8, 16 )
custom_fonts/normal_font = SubResource( 1 )
text = "IDADE"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 600.0
margin_top = 88.0
margin_right = 656.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "XP"

[node name="for_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 299.0
margin_right = 224.0
margin_bottom = 331.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "FOR"

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 352.0
margin_top = 112.0
margin_right = 560.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "ALIGNMENT"

[node name="des_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 335.0
margin_right = 224.0
margin_bottom = 367.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "DES"

[node name="res_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 371.0
margin_right = 224.0
margin_bottom = 403.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "RES"

[node name="int_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 408.0
margin_right = 224.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "INT"

[node name="esp_txt" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 448.0
margin_right = 224.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "ESP"

[node name="RichTextLabel13" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 178.0
margin_top = 181.0
margin_right = 282.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/normal_font = SubResource( 1 )
text = "INICIATIVA"

[node name="RichTextLabel14" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 600.0
margin_top = 56.0
margin_right = 656.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "NV"

[node name="RichTextLabel15" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 166.0
margin_top = 205.0
margin_right = 294.0
margin_bottom = 237.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "VELOCIDADE"

[node name="RichTextLabel16" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 202.0
margin_top = 154.0
margin_right = 306.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/normal_font = SubResource( 1 )
text = "ALTURA"

[node name="RichTextLabel17" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 528.0
margin_top = 248.0
margin_right = 713.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( 25, 10 )
custom_fonts/normal_font = SubResource( 1 )
text = "INVENTARIO"

[node name="RichTextLabel18" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 408.0
margin_top = 147.0
margin_right = 536.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "ZENI"

[node name="alignment" type="OptionButton" parent="."]
margin_left = 453.0
margin_top = 113.0
margin_right = 549.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 48, 24 )

[node name="zeni" type="LineEdit" parent="."]
margin_left = 453.0
margin_top = 146.0
margin_right = 549.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 56, 16 )

[node name="nome" type="LineEdit" parent="."]
margin_left = 232.0
margin_top = 102.0
margin_right = 327.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 56, 16 )

[node name="RichTextLabel19" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 328.0
margin_top = 183.0
margin_right = 553.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( -309, -162 )
custom_fonts/normal_font = SubResource( 1 )
text = "DANO DE NIVEL"

[node name="idade" type="LineEdit" parent="."]
margin_left = 269.0
margin_top = 129.0
margin_right = 327.0
margin_bottom = 153.0
rect_pivot_offset = Vector2( 48, 24 )

[node name="altura" type="LineEdit" parent="."]
margin_left = 269.0
margin_top = 155.0
margin_right = 327.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 48, 24 )

[node name="for" type="LineEdit" parent="."]
margin_left = 89.0
margin_top = 293.0
margin_right = 147.0
margin_bottom = 321.0
rect_pivot_offset = Vector2( -400, 104 )

[node name="res" type="LineEdit" parent="."]
margin_left = 89.0
margin_top = 371.0
margin_right = 147.0
margin_bottom = 399.0
rect_pivot_offset = Vector2( 56, 16 )

[node name="des" type="LineEdit" parent="."]
margin_left = 89.0
margin_top = 330.0
margin_right = 147.0
margin_bottom = 358.0
rect_pivot_offset = Vector2( 56, 16 )

[node name="int" type="LineEdit" parent="."]
margin_left = 89.0
margin_top = 408.0
margin_right = 147.0
margin_bottom = 436.0
rect_pivot_offset = Vector2( 56, 16 )

[node name="esp" type="LineEdit" parent="."]
margin_left = 89.0
margin_top = 448.0
margin_right = 147.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 56, 16 )

[node name="nv" type="LineEdit" parent="."]
margin_left = 634.0
margin_top = 56.0
margin_right = 692.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 48, 24 )
max_length = 4

[node name="xp" type="LineEdit" parent="."]
margin_left = 634.0
margin_top = 89.0
margin_right = 692.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 48, 24 )
max_length = 4

[node name="new_atk" type="AcceptDialog" parent="."]
margin_left = 232.0
margin_top = 136.0
margin_right = 674.0
margin_bottom = 542.0
window_title = "Criando novo ataque"
dialog_hide_on_ok = false

[node name="Panel" type="Panel" parent="new_atk"]
margin_left = 8.0
margin_top = 8.0
margin_right = 434.0
margin_bottom = 370.0

[node name="mod_choice_box" type="OptionButton" parent="new_atk/Panel"]
margin_left = 32.0
margin_top = 146.0
margin_right = 392.0
margin_bottom = 170.0

[node name="atk_name" type="LineEdit" parent="new_atk/Panel"]
margin_left = 31.0
margin_top = 38.0
margin_right = 392.0
margin_bottom = 62.0

[node name="RichTextLabel" type="RichTextLabel" parent="new_atk/Panel"]
margin_left = 144.0
margin_top = 16.0
margin_right = 260.0
margin_bottom = 40.0
text = "Nome do ataque:"

[node name="RichTextLabel2" type="RichTextLabel" parent="new_atk/Panel"]
margin_left = 144.0
margin_top = 176.0
margin_right = 296.0
margin_bottom = 195.0
rect_pivot_offset = Vector2( 136, 13 )
text = "Formula do ataque:"

[node name="RichTextLabel3" type="RichTextLabel" parent="new_atk/Panel"]
margin_left = 8.0
margin_top = 224.0
margin_right = 434.0
margin_bottom = 375.0
rect_pivot_offset = Vector2( 56, 5 )
text = "Caracteres aceitos para uma formula: \"( ) + - * f d r i e n D\" qualquer numero pode ser usado em conjunto a estes caracteres para criar uma formula. Os caracters de letras mencionados são substituidos na formula por valores expecificos: f = força,
 d = destreza, r = resistencia, i = inteligencia, e = espirito, n = nivel, D = diferença entre o dado de ataque rolado e o dado de esquiva/bloqueio do oponente. 
Exemplo de formula: (2 + f) * D
"

[node name="RichTextLabel4" type="RichTextLabel" parent="new_atk/Panel"]
margin_left = 176.0
margin_top = 71.0
margin_right = 602.0
margin_bottom = 89.0
text = "Custo de ki:"

[node name="ki_cost" type="LineEdit" parent="new_atk/Panel"]
margin_left = 32.0
margin_top = 93.0
margin_right = 392.0
margin_bottom = 117.0

[node name="formula" type="LineEdit" parent="new_atk/Panel"]
margin_left = 31.0
margin_top = 192.0
margin_right = 392.0
margin_bottom = 216.0

[node name="RichTextLabel5" type="RichTextLabel" parent="new_atk/Panel"]
margin_left = 76.0
margin_top = 120.0
margin_right = 502.0
margin_bottom = 136.0
text = "Modificador a ser aplicado na rolagem do ataque:"

[node name="cancel_atk" type="Button" parent="new_atk/Panel"]
margin_left = 271.0
margin_top = 370.0
margin_right = 396.0
margin_bottom = 390.0
text = "CANCELAR"

[node name="error_message" type="RichTextLabel" parent="new_atk/Panel"]
margin_top = 368.0
margin_right = 192.0
margin_bottom = 392.0

[node name="menu_panel" type="Panel" parent="."]
margin_top = -90.0
margin_right = 1024.0
margin_bottom = 14.0

[node name="return" type="Button" parent="menu_panel"]
margin_left = 16.0
margin_top = 42.0
margin_right = 147.0
margin_bottom = 62.0
text = "Voltar ao menu"

[node name="concluir" type="Button" parent="menu_panel"]
margin_left = 219.0
margin_top = 34.0
margin_right = 389.0
margin_bottom = 55.0
text = "CONCLUIR CRIAÇÃO"

[node name="t_+" type="Button" parent="menu_panel"]
margin_left = 408.0
margin_top = 34.0
margin_right = 578.0
margin_bottom = 55.0
text = "NOVA TRANSFORMAÇÃO"

[node name="s_+" type="Button" parent="menu_panel"]
margin_left = 408.0
margin_top = 66.0
margin_right = 580.0
margin_bottom = 87.0
text = "NOVO ATAQUE"

[node name="skill_box_0" type="OptionButton" parent="menu_panel"]
margin_left = 503.0
margin_top = 635.0
margin_right = 659.0
margin_bottom = 655.0

[node name="transformation_box_0" type="OptionButton" parent="menu_panel"]
margin_left = 502.0
margin_top = 579.0
margin_right = 657.0
margin_bottom = 599.0

[node name="Tween" type="Tween" parent="."]

[node name="incomplete_sheet_popup" type="AcceptDialog" parent="."]
margin_left = 340.0
margin_top = 136.0
margin_right = 540.0
margin_bottom = 293.0
window_title = "Alerta!"

[node name="error_show" type="RichTextLabel" parent="incomplete_sheet_popup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 121.0
text = "cet"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 269.0
margin_top = 113.0
margin_right = 584.0
margin_bottom = 393.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Abrir um Arquivo"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )

[node name="change_image" type="Button" parent="."]
margin_left = 42.0
margin_top = 204.0
margin_right = 154.0
margin_bottom = 228.0
text = "Trocar foto"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 501.0
margin_top = 277.0
margin_right = 652.0
margin_bottom = 297.0

[connection signal="text_changed" from="for" to="." method="_on_for_text_changed"]
[connection signal="confirmed" from="new_atk" to="." method="_on_new_atk_confirmed"]
[connection signal="pressed" from="new_atk/Panel/cancel_atk" to="." method="_on_cancel_atk_pressed"]
[connection signal="pressed" from="menu_panel/concluir" to="." method="_on_concluir_pressed"]
[connection signal="pressed" from="menu_panel/s_+" to="." method="_on_s__pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="change_image" to="." method="_on_change_image_pressed"]
